--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.3
+  google_fonts: ^2.1.0
+  favorite_button: ^0.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
